force-app/main/default/objects/User/fields/RS_Guided_Workflow_Root_Node__c.field-meta.xml
<CustomField>
    <fullName>RS_Guided_Workflow_Root_Node__c</fullName>
    <description>If User selects &quot;UserId&quot; as Rooting Creteria, this field is mandatory which specifies the start node of guided workflow</description>
    <label>Guided Workflow Root Node</label>
    <length>20</length>
    <type>Text</type>
</CustomField>