force-app/main/default/objects/User/fields/RS_Guided_Workflow_Rooting_Criteria__c.field-meta.xml
<CustomField>
    <fullName>RS_Guided_Workflow_Rooting_Criteria__c</fullName>
    <label>Guided Workflow Rooting Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Id</fullName>
                <label>UserId</label>
            </value>
            <value>
                <fullName>ProfileId</fullName>
                <label>Profile</label>
            </value>
            <value>
                <fullName>UserRoleId</fullName>
                <label>UserRole</label>
            </value>
            <value>
                <fullName>RS_UserLicenseId__c</fullName>
                <label>UserLicense</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>