force-app/main/default/objects/User/fields/RS_UserLicenseId__c.field-meta.xml
<CustomField>
    <fullName>RS_UserLicenseId__c</fullName>
    <formula>Profile.UserLicense.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserLicenseId</label>
    <type>Text</type>
</CustomField>