force-app/main/default/objects/User/fields/RSI_Name__c.field-meta.xml
<CustomField>
    <fullName>RSI_Name__c</fullName>
    <formula>FirstName  + &apos; &apos;  +  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSI_Name</label>
    <type>Text</type>
</CustomField>